# dalin-l

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dalin-l30-nemesis-roadmap.md
.github/workflows/: benchmark.yml  build.yml  ci.yml
.workbuddy/memory/: MEMORY.md
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/cmd/: agents.rs  analyze.rs  build.rs  check.rs  dashboard.rs  demo.rs  evolve.rs  info.rs  init.rs  mod.rs  pkg.rs  profile.rs  repl.rs  run.rs  tasks.rs  tests.rs  tree.rs  v2.rs  vm.rs
cli/src/cmd/evolve/: audit_revert.rs  data_models.rs  mod.rs  subcommands.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
compiler/: Cargo.toml
compiler/benches/: bench_e2e.rs  bench_tokens.rs
compiler/src/: ast.rs  cffi.rs  error.rs  j1_pattern_learning.rs  j2_strategy_gen.rs  j3_evolution_verify.rs  latency.rs  lexer.rs  lib.rs  llm.rs  macro_expand.rs  module.rs  package.rs  parser.rs  qn1.rs  runtime.rs  stdlib_loader.rs  task_spec.rs  token.rs  ty.rs  ty2.rs
compiler/src/borrow_check/: engine.rs  error.rs  mod.rs  model.rs  scope.rs  tests.rs
compiler/src/runtime/: engine.rs  env.rs  healing.rs  mod.rs  scheduler.rs  value.rs
compiler/src/ty2/: capability_inferencer.rs  cognitive_loop_inferencer.rs  confidence_inferencer.rs  effect_inferencer.rs  governance_inferencer.rs  lattice.rs  mod.rs  tests.rs  time_constraint.rs
compiler/tests/: bench_compile.rs  bench_compile_speed.rs  bench_seven_channel.rs  mod.rs  stdlib_empirical.rs
control-plane/: Cargo.toml  README.md  build.rs  docker-compose.yml
control-plane/proto/: control.proto
control-plane/src/: agent_registry.rs  client.rs  convert.rs  dispatch.rs  effect_monitor.rs  lib.rs  registry.rs  scheduler.rs  server.rs  store.rs  store_etcd.rs  store_factory.rs  store_postgres.rs  store_redis.rs  tests.rs  transport.rs
control-plane/src/k8s/: controller.rs  mod.rs  operator_types.rs  scheduler_controller.rs
control-plane/tests/: grpc.rs  smoke.rs
dap/: Cargo.toml
dap/src/: lib.rs  main.rs  protocol.rs
dlvm/: Cargo.toml
dlvm/src/: compiler.rs  lib.rs
dlvm/tests/: smoke.rs  stdlib_behavior.rs
docs/: PHASE_J_SELF_EVOLUTION.md
docs/adrs/: ADR-016-lsp.md  ADR-017-package-manager.md  ADR-018-k8s-operator.md  ADR-019-vscode-extension.md
docs/architecture/: adr-001-versioned-types-v3.md  adr-002-phase-j-self-evolution.md  adr-003-stdlib-evidence.md  adr-004-lsp-vscodext-k.md  adr-005-benchmark-baseline-l.md  index.md
examples/: cognitive.dal  cognitive_agent_pipeline.dal
extensions/vscode-dalan/: language-configuration.json  package.json  tsconfig.json
extensions/vscode-dalan/snippets/: dalan.json
extensions/vscode-dalan/src/: extension.ts
extensions/vscode-dalan/syntaxes/: dalan.tmLanguage.json
fmt/: Cargo.toml
fmt/src/: main.rs
fmt/tests/: smoke.rs
k8s/crd/bases/: dalin.ai_dalintasks.yaml
k8s/overlays/dev/: dalin-dev.yaml
lsp/: Cargo.toml
lsp/src/: main.rs
lsp/tests/: smoke.rs
output/: dalin-l30-audit-v3.md  phase_j_audit_report.md  self-heal-phase2-report.md
pyo3-bindings/: Cargo.toml
pyo3-bindings/src/: lib.rs
pyo3-bindings/tests/: smoke.rs
registry/: Cargo.toml
registry/src/: lib.rs
runtime/: Cargo.toml  Dockerfile
runtime/benches/: bench_interp.rs
runtime/src/: bridge.rs  cognitive.rs  env.rs  gc.rs  interpreter.rs  lib.rs  profiler.rs  scheduler.rs
runtime/tests/: bench_runtime.rs
src/: ast.rs  env.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs  ty.rs  ty2.rs
stdlib/: Cargo.toml  assert.dal  assert_all.dal  assert_any.dal  atomic.dal  await_all.dal  await_any.dal  bitfield.dal  bitmap.dal  bloom.dal  buffer.dal  channel.dal  circular_buf.dal  cognition.dal  collections.dal  config.dal  core_types.dal  crc.dal  crypto.dal  dashmap.dal  date.dal  dbg.dal  debug.dal  deque.dal  dual_stack.dal  edge_detector.dal  encoding.dal  enum_map.dal  env.dal  errors.dal  event.dal  executor.dal  file_ext.dal  fingerprint.dal  flat_hash.dal  flume.dal  fn_traits.dal  fs.dal  future.dal  governance.dal  (+85 more)
stdlib/core/: iter.dal  math.dal  option.dal  result.dal
stdlib/src/: lib.rs
