[package]
name = "dalin-compiler"
version.workspace = true
edition.workspace = true

[lib]
name = "dalin_compiler"
path = "src/lib.rs"

[dependencies]
ureq = { version = "3", features = ["json"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_tokens"
harness = false
