[package]
name = "dalin-compiler"
version.workspace = true
edition.workspace = true

[lib]
name = "dalin_compiler"
path = "src/lib.rs"

[dependencies]
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libloading = "0.8"
libc = "0.2"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_tokens"
harness = false

[[bench]]
name = "bench_e2e"
harness = false
