[package]
name = "dalin-dap"
version.workspace = true
edition.workspace = true
description = "Dalin L 3.0 — Debug Adapter Protocol Server"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dalin-compiler = { path = "../compiler" }
dalin-runtime = { path = "../runtime" }

[[bin]]
name = "dalin-dap"
path = "src/main.rs"
