[package]
name = "dalin-ls"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dalin-ls"
path = "src/main.rs"

[dependencies]
dalin-compiler = { path = "../compiler" }
serde_json = "1"
lsp-types = "0.95"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync"] }
