[package]
name = "dalin-runtime"
version.workspace = true
edition.workspace = true

[lib]
name = "dalin_runtime"
path = "src/lib.rs"

[dependencies]
dalin-compiler = { path = "../compiler" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_interp"
harness = false
