[package]
name = "dalin-runtime"
version.workspace = true
edition.workspace = true

[lib]
name = "dalin_runtime"
path = "src/lib.rs"

[dependencies]
dalin-compiler = { path = "../compiler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_interp"
harness = false
